// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip props basic tooltip 1`] = `
<div>
  <span
    aria-describedby="basic-example"
    data-tooltip-id="basic-example"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="basic-example"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props clickable tooltip 1`] = `
<div>
  <span
    aria-describedby="example-clickable"
    data-tooltip-id="example-clickable"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-clickable"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      <button>
        button
      </button>
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with custom position 1`] = `
<div>
  <span
    aria-describedby="example-place"
    data-tooltip-id="example-place"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-place"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with delay hide 1`] = `
<div>
  <span
    data-tooltip-id="example-delay-hide"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`tooltip props tooltip with delay show 1`] = `
<div>
  <span
    aria-describedby="example-delay-show"
    data-tooltip-id="example-delay-show"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-delay-show"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with disableTooltip return false 1`] = `
<div>
  <span
    aria-describedby="example-disableTooltip-false"
    data-tooltip-id="example-disableTooltip-false"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-disableTooltip-false"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with float 1`] = `
<div>
  <span
    aria-describedby="example-float"
    data-tooltip-id="example-float"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="example-float"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -1px; bottom: -3px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with place 1`] = `
<div>
  <span
    aria-describedby="example-place"
    data-tooltip-id="example-place"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-right react-tooltip__show"
    id="example-place"
    role="tooltip"
    style="left: 10px; top: 5px;"
  >
    <div
      class="react-tooltip-content-wrapper"
    >
      Hello World!
    </div>
    <div
      class="react-tooltip-arrow"
      style="--rt-arrow-size: 8px; left: -3px; top: -1px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip without element reference 1`] = `
<div>
  <span>
    Lorem Ipsum
  </span>
</div>
`;
